infra/k8s/event-bus-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: event-bus-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app:  event-bus
  template:
    metadata:
      labels:
        app:  event-bus
    spec:
      containers: 
        - name: event-bus
          # imagePullPolicy: Always
          # image:  mernstack.azurecr.io/event-bus
          image: docker.io/mnythedocker/event-bus
          # image:  docker.io/library/event-bus:latest
          # image:  event-bus:latest
