infra/k8s/posts-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: posts-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app:  posts
  template:
    metadata:
      labels:
        app:  posts
    spec:
      containers: 
        - name: posts
          # imagePullPolicy: Always
          image:  docker.io/library/posts:latest  #latest is default if not specified


# Always : It always pull the image in container irrespective of changes in the image
# Never : It will never pull the new image on the container
# IfNotPresent : It will pull the new image in cluster if the image is not present. default
