infra/k8s/comments-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: comments-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app:  comments
  template:
    metadata:
      labels:
        app:  comments
    spec:
      containers: 
        - name: comments
          # imagePullPolicy: Always
          # image:  mernstack.azurecr.io/comments
          image: docker.io/mnythedocker/comments
          # image:  docker.io/library/comments:latest
          # image:  comments:latest

# to get errors kubectl describe pod comments-depl-5b5ffdddc8-xdhrg
# with "---" we can create new yml to create object
---
apiVersion: v1
kind: Service
metadata:
  name: comments-srv
spec:
  selector:
    app:  comments
  # type: it is default behaveior so excluded
  ports:
    - name: comments
      protocol: TCP
      port: 4001
      targetPort: 4001 

# $ kubectl get services
# NAME            TYPE        CLUSTER-IP       EXTERNAL-IP   PORT(S)    AGE
# comments-srv   ClusterIP   10.108.115.184   <none>        4005/TCP   10s
# kubernetes      ClusterIP   10.96.0.1        <none>        443/TCP    166m
# posts-srv       NodePort    10.104.33.159    <none>        4000:31620/TCP   28s

# $ kubectl get deployments
# NAME             READY   UP-TO-DATE   AVAILABLE   AGE
# comments-depl   1/1     1            1           71m
# posts-depl       1/1     1            1           50m

# to rollout new image to pods
# $ kubectl rollout restart deployment  comments-depl
# deployment.apps/comments-depl restarted
