infra/k8s/moderation-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: moderation-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app:  moderation
  template:
    metadata:
      labels:
        app:  moderation
    spec:
      containers: 
        - name: moderation
          # imagePullPolicy: Always
          # image:  mernstack.azurecr.io/moderation
          image: docker.io/mnythedocker/moderation
          # image:  docker.io/library/moderation:latest
          # image:  moderation:latest

# to get errors kubectl describe pod moderation-depl-5b5ffdddc8-xdhrg
# with "---" we can create new yml to create object
---
apiVersion: v1
kind: Service
metadata:
  name: moderation-srv
spec:
  selector:
    app:  moderation
  # type: it is default behaveior so excluded
  ports:
    - name: moderation
      protocol: TCP
      port: 4003
      targetPort: 4003 

# $ kubectl get services
# NAME            TYPE        CLUSTER-IP       EXTERNAL-IP   PORT(S)    AGE
# moderation-srv   ClusterIP   10.108.115.184   <none>        4005/TCP   10s
# kubernetes      ClusterIP   10.96.0.1        <none>        443/TCP    166m
# posts-srv       NodePort    10.104.33.159    <none>        4000:31620/TCP   28s

# $ kubectl get deployments
# NAME             READY   UP-TO-DATE   AVAILABLE   AGE
# moderation-depl   1/1     1            1           71m
# posts-depl       1/1     1            1           50m

# to rollout new image to pods
# $ kubectl rollout restart deployment  moderation-depl
# deployment.apps/moderation-depl restarted
