infra/k8s/posts-srv.yaml
apiVersion: v1  #nodePort config file
kind: Service
metadata:
  name: posts-srv
spec:
  type: NodePort
  selector:
    app:  posts
  ports:
    - name: posts
      protocol: TCP
      port: 4000  #
      targetPort: 4000 #application listening for traffic on it's port



# $ kubectl get services
# NAME         TYPE        CLUSTER-IP     EXTERNAL-IP   PORT(S)          AGE
# kubernetes   ClusterIP   10.96.0.1      <none>        443/TCP          14h
# posts-srv    NodePort    10.105.221.1   <none>        4000:32558/TCP   33s #32558 is nodePort


# user@MSI MINGW64 ~/Documents/code/blog/infra/k8s (node_port_service)
# $ kubectl describe service posts-srv
# Name:                     posts-srv
# Namespace:                default
# Labels:                   <none>
# Annotations:              <none>
# Selector:                 app=posts
# Type:                     NodePort
# IP Family Policy:         SingleStack
# IP Families:              IPv4
# IP:                       10.105.221.1
# IPs:                      10.105.221.1
# LoadBalancer Ingress:     localhost
# Port:                     posts  4000/TCP
# TargetPort:               4000/TCP
# NodePort:                 posts  32558/TCP listening-> http://localhost:32558/posts
# Endpoints:                10.1.0.47:4000
# Session Affinity:         None
# External Traffic Policy:  Cluster
# Events:                   <none>
