infra/k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: posts.com   # for dev: trick local pc to go to  localhost.com as posts.com
      http:
        paths:
          - path: /posts    #app.get('posts')
            pathType: Prefix
            backend:
              service:
                name: post-cluster-ip-srv #not you servis name dosn't have "s" see(posts-depl.yaml)
                port:
                  number: 4000



# apiVersion: networking.k8s.io/v1beta1
# kind: Ingress
# metadata:
#   name: ingress-srv
#   annotations:
#     kubernetes.io/ingress.class:  nginx
# spec:
#   rules:
#     - host: posts.com
#       https:  
#         paths:
#           - path: /posts #app.get('posts')
#             backend:  
#               serviceName:  posts-clusterip-srv
#               servicePort:  4000
